platform/minecraft/src/main/antlr/sfml/.antlr/SFMLParser.java
// Generated from d:/Repos/Minecraft/SFM/repos2/1.19.2/platform/minecraft/src/main/antlr/sfml/SFML.g4 by ANTLR 4.13.1

package ca.teamdman.langs;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SFMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, THEN=2, ELSE=3, HAS=4, OVERALL=5, SOME=6, ONE=7, LONE=8, TRUE=9, 
		FALSE=10, NOT=11, AND=12, OR=13, GT=14, GT_SYMBOL=15, LT=16, LT_SYMBOL=17, 
		EQ=18, EQ_SYMBOL=19, LE=20, LE_SYMBOL=21, GE=22, GE_SYMBOL=23, FROM=24, 
		TO=25, INPUT=26, OUTPUT=27, WHERE=28, SLOTS=29, SLOT=30, RETAIN=31, EACH=32, 
		EXCEPT=33, FORGET=34, EMPTY=35, IN=36, WITHOUT=37, WITH=38, TAG=39, HASHTAG=40, 
		ROUND=41, ROBIN=42, BY=43, LABEL=44, BLOCK=45, TOP=46, BOTTOM=47, NORTH=48, 
		EAST=49, SOUTH=50, WEST=51, SIDE=52, LEFT=53, RIGHT=54, FRONT=55, BACK=56, 
		NULL=57, TICKS=58, TICK=59, SECONDS=60, SECOND=61, GLOBAL=62, PLUS=63, 
		REDSTONE=64, PULSE=65, DO=66, END=67, NAME=68, EVERY=69, COMMA=70, COLON=71, 
		SLASH=72, DASH=73, LPAREN=74, RPAREN=75, NUMBER_WITH_G_SUFFIX=76, NUMBER=77, 
		IDENTIFIER=78, STRING=79, LINE_COMMENT=80, WS=81, UNUSED=82;
	public static final int
		RULE_program = 0, RULE_name = 1, RULE_trigger = 2, RULE_interval = 3, 
		RULE_block = 4, RULE_statement = 5, RULE_forgetStatement = 6, RULE_inputStatement = 7, 
		RULE_outputStatement = 8, RULE_inputResourceLimits = 9, RULE_outputResourceLimits = 10, 
		RULE_resourceLimitList = 11, RULE_resourceLimit = 12, RULE_limit = 13, 
		RULE_quantity = 14, RULE_retention = 15, RULE_resourceExclusion = 16, 
		RULE_resourceId = 17, RULE_resourceIdList = 18, RULE_resourceIdDisjunction = 19, 
		RULE_with = 20, RULE_withClause = 21, RULE_tagMatcher = 22, RULE_sidequalifier = 23, 
		RULE_side = 24, RULE_slotqualifier = 25, RULE_rangeset = 26, RULE_range = 27, 
		RULE_ifStatement = 28, RULE_boolexpr = 29, RULE_comparisonOp = 30, RULE_setOp = 31, 
		RULE_labelAccess = 32, RULE_roundrobin = 33, RULE_label = 34, RULE_emptyslots = 35, 
		RULE_identifier = 36, RULE_string = 37, RULE_number = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "name", "trigger", "interval", "block", "statement", "forgetStatement", 
			"inputStatement", "outputStatement", "inputResourceLimits", "outputResourceLimits", 
			"resourceLimitList", "resourceLimit", "limit", "quantity", "retention", 
			"resourceExclusion", "resourceId", "resourceIdList", "resourceIdDisjunction", 
			"with", "withClause", "tagMatcher", "sidequalifier", "side", "slotqualifier", 
			"rangeset", "range", "ifStatement", "boolexpr", "comparisonOp", "setOp", 
			"labelAccess", "roundrobin", "label", "emptyslots", "identifier", "string", 
			"number"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'>'", null, "'<'", null, "'='", null, "'<='", null, 
			"'>='", null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "'#'", null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "','", 
			"':'", "'/'", "'-'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "THEN", "ELSE", "HAS", "OVERALL", "SOME", "ONE", "LONE", 
			"TRUE", "FALSE", "NOT", "AND", "OR", "GT", "GT_SYMBOL", "LT", "LT_SYMBOL", 
			"EQ", "EQ_SYMBOL", "LE", "LE_SYMBOL", "GE", "GE_SYMBOL", "FROM", "TO", 
			"INPUT", "OUTPUT", "WHERE", "SLOTS", "SLOT", "RETAIN", "EACH", "EXCEPT", 
			"FORGET", "EMPTY", "IN", "WITHOUT", "WITH", "TAG", "HASHTAG", "ROUND", 
			"ROBIN", "BY", "LABEL", "BLOCK", "TOP", "BOTTOM", "NORTH", "EAST", "SOUTH", 
			"WEST", "SIDE", "LEFT", "RIGHT", "FRONT", "BACK", "NULL", "TICKS", "TICK", 
			"SECONDS", "SECOND", "GLOBAL", "PLUS", "REDSTONE", "PULSE", "DO", "END", 
			"NAME", "EVERY", "COMMA", "COLON", "SLASH", "DASH", "LPAREN", "RPAREN", 
			"NUMBER_WITH_G_SUFFIX", "NUMBER", "IDENTIFIER", "STRING", "LINE_COMMENT", 
			"WS", "UNUSED"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SFML.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SFMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SFMLParser.EOF, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<TriggerContext> trigger() {
			return getRuleContexts(TriggerContext.class);
		}
		public TriggerContext trigger(int i) {
			return getRuleContext(TriggerContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAME) {
				{
				setState(78);
				name();
				}
			}

			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EVERY) {
				{
				{
				setState(81);
				trigger();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(SFMLParser.NAME, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(NAME);
			setState(90);
			string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TriggerContext extends ParserRuleContext {
		public TriggerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trigger; }
	 
		public TriggerContext() { }
		public void copyFrom(TriggerContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PulseTriggerContext extends TriggerContext {
		public TerminalNode EVERY() { return getToken(SFMLParser.EVERY, 0); }
		public TerminalNode REDSTONE() { return getToken(SFMLParser.REDSTONE, 0); }
		public TerminalNode PULSE() { return getToken(SFMLParser.PULSE, 0); }
		public TerminalNode DO() { return getToken(SFMLParser.DO, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode END() { return getToken(SFMLParser.END, 0); }
		public PulseTriggerContext(TriggerContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TimerTriggerContext extends TriggerContext {
		public TerminalNode EVERY() { return getToken(SFMLParser.EVERY, 0); }
		public IntervalContext interval() {
			return getRuleContext(IntervalContext.class,0);
		}
		public TerminalNode DO() { return getToken(SFMLParser.DO, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode END() { return getToken(SFMLParser.END, 0); }
		public TimerTriggerContext(TriggerContext ctx) { copyFrom(ctx); }
	}

	public final TriggerContext trigger() throws RecognitionException {
		TriggerContext _localctx = new TriggerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_trigger);
		try {
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new TimerTriggerContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				match(EVERY);
				setState(93);
				interval();
				setState(94);
				match(DO);
				setState(95);
				block();
				setState(96);
				match(END);
				}
				break;
			case 2:
				_localctx = new PulseTriggerContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				match(EVERY);
				setState(99);
				match(REDSTONE);
				setState(100);
				match(PULSE);
				setState(101);
				match(DO);
				setState(102);
				block();
				setState(103);
				match(END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntervalContext extends ParserRuleContext {
		public IntervalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interval; }
	 
		public IntervalContext() { }
		public void copyFrom(IntervalContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IntervalNoSpaceContext extends IntervalContext {
		public TerminalNode NUMBER_WITH_G_SUFFIX() { return getToken(SFMLParser.NUMBER_WITH_G_SUFFIX, 0); }
		public TerminalNode TICKS() { return getToken(SFMLParser.TICKS, 0); }
		public TerminalNode TICK() { return getToken(SFMLParser.TICK, 0); }
		public TerminalNode SECONDS() { return getToken(SFMLParser.SECONDS, 0); }
		public TerminalNode SECOND() { return getToken(SFMLParser.SECOND, 0); }
		public TerminalNode PLUS() { return getToken(SFMLParser.PLUS, 0); }
		public TerminalNode NUMBER() { return getToken(SFMLParser.NUMBER, 0); }
		public IntervalNoSpaceContext(IntervalContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IntervalSpaceContext extends IntervalContext {
		public TerminalNode TICKS() { return getToken(SFMLParser.TICKS, 0); }
		public TerminalNode TICK() { return getToken(SFMLParser.TICK, 0); }
		public TerminalNode SECONDS() { return getToken(SFMLParser.SECONDS, 0); }
		public TerminalNode SECOND() { return getToken(SFMLParser.SECOND, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(SFMLParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(SFMLParser.NUMBER, i);
		}
		public TerminalNode GLOBAL() { return getToken(SFMLParser.GLOBAL, 0); }
		public TerminalNode PLUS() { return getToken(SFMLParser.PLUS, 0); }
		public IntervalSpaceContext(IntervalContext ctx) { copyFrom(ctx); }
	}

	public final IntervalContext interval() throws RecognitionException {
		IntervalContext _localctx = new IntervalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_interval);
		int _la;
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TICKS:
			case TICK:
			case SECONDS:
			case SECOND:
			case GLOBAL:
			case PLUS:
			case NUMBER:
				_localctx = new IntervalSpaceContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NUMBER) {
					{
					setState(107);
					match(NUMBER);
					}
				}

				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==GLOBAL) {
					{
					setState(110);
					match(GLOBAL);
					}
				}

				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLUS) {
					{
					setState(113);
					match(PLUS);
					setState(114);
					match(NUMBER);
					}
				}

				setState(117);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 4323455642275676160L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case NUMBER_WITH_G_SUFFIX:
				_localctx = new IntervalNoSpaceContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				match(NUMBER_WITH_G_SUFFIX);
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLUS) {
					{
					setState(119);
					match(PLUS);
					setState(120);
					match(NUMBER);
					}
				}

				setState(123);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 4323455642275676160L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17431527426L) != 0)) {
				{
				{
				setState(126);
				statement();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public InputStatementContext inputStatement() {
			return getRuleContext(InputStatementContext.class,0);
		}
		public OutputStatementContext outputStatement() {
			return getRuleContext(OutputStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ForgetStatementContext forgetStatement() {
			return getRuleContext(ForgetStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FROM:
			case INPUT:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				inputStatement();
				}
				break;
			case TO:
			case OUTPUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				outputStatement();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				ifStatement();
				}
				break;
			case FORGET:
				enterOuterAlt(_localctx, 4);
				{
				setState(135);
				forgetStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForgetStatementContext extends ParserRuleContext {
		public TerminalNode FORGET() { return getToken(SFMLParser.FORGET, 0); }
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SFMLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SFMLParser.COMMA, i);
		}
		public ForgetStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forgetStatement; }
	}

	public final ForgetStatementContext forgetStatement() throws RecognitionException {
		ForgetStatementContext _localctx = new ForgetStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_forgetStatement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(FORGET);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 46)) & ~0x3f) == 0 && ((1L << (_la - 46)) & 12885280643L) != 0)) {
				{
				setState(139);
				label();
				}
			}

			setState(146);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(142);
					match(COMMA);
					setState(143);
					label();
					}
					} 
				}
				setState(148);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(149);
				match(COMMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputStatementContext extends ParserRuleContext {
		public TerminalNode INPUT() { return getToken(SFMLParser.INPUT, 0); }
		public TerminalNode FROM() { return getToken(SFMLParser.FROM, 0); }
		public LabelAccessContext labelAccess() {
			return getRuleContext(LabelAccessContext.class,0);
		}
		public InputResourceLimitsContext inputResourceLimits() {
			return getRuleContext(InputResourceLimitsContext.class,0);
		}
		public ResourceExclusionContext resourceExclusion() {
			return getRuleContext(ResourceExclusionContext.class,0);
		}
		public TerminalNode EACH() { return getToken(SFMLParser.EACH, 0); }
		public InputStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputStatement; }
	}

	public final InputStatementContext inputStatement() throws RecognitionException {
		InputStatementContext _localctx = new InputStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_inputStatement);
		int _la;
		try {
			setState(176);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INPUT:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				match(INPUT);
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((((_la - 31)) & ~0x3f) == 0 && ((1L << (_la - 31)) & 492593620287681L) != 0)) {
					{
					setState(153);
					inputResourceLimits();
					}
				}

				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EXCEPT) {
					{
					setState(156);
					resourceExclusion();
					}
				}

				setState(159);
				match(FROM);
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EACH) {
					{
					setState(160);
					match(EACH);
					}
				}

				setState(163);
				labelAccess();
				}
				break;
			case FROM:
				enterOuterAlt(_localctx, 2);
				{
				setState(164);
				match(FROM);
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EACH) {
					{
					setState(165);
					match(EACH);
					}
				}

				setState(168);
				labelAccess();
				setState(169);
				match(INPUT);
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((((_la - 31)) & ~0x3f) == 0 && ((1L << (_la - 31)) & 492593620287681L) != 0)) {
					{
					setState(170);
					inputResourceLimits();
					}
				}

				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EXCEPT) {
					{
					setState(173);
					resourceExclusion();
					}
				}

				}
				break;
			default:
